src/main/kubernetes/keycloak/keycloak-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: plessme-keycloak-svc
  namespace: dev
spec:
  selector:
    app: keycloak
    group: plessme
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
