src/main/kubernetes/keycloak/keycloak-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: keycloak
    group: plessme
  name: plessme-keycloak-ing
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 8k
    certmanager.k8s.io/cluster-issuer: cscope-ci-certificate-authority
spec:
  rules:
  - host: plessme.bongladesch.com
    http:
      paths:
      - path: /auth
        backend:
          serviceName: plessme-keycloak-svc
          servicePort: 8080
  tls:
  - hosts:
    - plessme.bongladesch.com
    secretName: plessme-bongladesch-com-tls-secret
